mootiro_komoo/static/css/styles.css
/* ... */
.icon-resource-big {
    background-image: url("../img/resource.png");
    background-position: 0 0;
    margin: 3px 0;
    width: 26px;
    height: 18px;
}

.icon-investment {
    background-image: url("../img/menu/investment.png");
    background-position: 0 0;
    margin: 2px 2px 1px;
    width: 20px;
    height: 15px;
}
*:hover > .icon-investment, .selected > .icon-investment {
    background-image: url("../img/menu/investment-active.png");
}
*:hover > .icon-investment.no-hover, .selected > .icon-investment.no-selected {
    background-image: url("../img/menu/investment.png");
}

.icon-project {
    background-image: url("../img/menu/project.png");
    background-position: 0 0;
    margin: 4px 1px 1px 4px;
    width: 20px;
    height: 13px;
}
*:hover > .icon-project, .selected > .icon-project {
    background-image: url("../img/menu/project-active.png");
}
*:hover > .icon-project.no-hover, .selected > .icon-project.no-selected  {
    background-image: url("../img/menu/project.png");
}

#flash-message {
    display: none;
    text-align: center;
    width: 100%;
    position: fixed;
    z-index: 99999999999999999999; /* nothing can be over this */
}
#flash-message .message {
    border-radius: 6px;
    background: #ffffbb;
    padding: 5px;
}

.map-button {
    cursor: pointer;
    display: inline-block;
    padding: 5px;
    margin: 10px 5px;
}
.map-panel .content .map-button,
.map-button:hover, .map-button.selected {
    padding: 2px 5px 5px;
    border: 1px solid #4092a9 !important;
}

/* Map panels */
#collapse-panel {
    background: url("../img/collapse-horizontal.png") no-repeat center center;
    width: 25px;
    height: 40px;
    position: absolute;
    right: 5px;
    top: 15px;
    cursor: pointer;
    z-index: 1000;
}
body.community #collapse-panel {
    top: 40px
}
#collapse-panel:hover {
    background-image: url("../img/collapse-horizontal-hover.png");
}
.collapsed #collapse-panel {
    background-image: url("../img/expand-horizontal.png");
}
.collapsed #collapse-panel:hover {
    background-image: url("../img/expand-horizontal-hover.png");
}
#map-panel {
    transition: left 1s;
    -moz-transition: left 1s; /* Firefox 4 */
    -webkit-transition: left 1s; /* Safari and Chrome */
    -o-transition: left 1s; /* Opera */
    background: #fafafa;
    padding: 0 30px 0 0;
    position: relative;
    left: 0px;
    -moz-box-shadow: 2px -2px 2px rgba(0, 0, 0, 0.25);
    -webkit-box-shadow: 2px -2px 2px rgba(0, 0, 0, 0.25);
    box-shadow: 2px -2px 2px rgba(0, 0, 0, 0.25);
    z-index: 10;
    display: none;
}
#map-panel .panel {
    border-top: 4px solid #ffbd2e;
    margin-top: 5px;
    padding-top: 10px;
    overflow-y: auto;
}
.collapsed #map-panel {
    left: -330px !important;
}
.collapsed #collapse-panel {
    background-color: white;
    right: -22px;
    -moz-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.25);
    -webkit-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.25);
    box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.25);
}
.collapsed #map-panel-content {
    transition: opacity 1s;
    -moz-transition: opacity 1s; /* Firefox 4 */
    -webkit-transition: opacity 1s; /* Safari and Chrome */
    -o-transition: opacity 1s; /* Opera */
    opacity: 0;
}
.komoo-map-googlemap {
    transition: margin-left 1s;
    -moz-transition: margin-left 1s; /* Firefox 4 */
    -webkit-transition: margin-left 1s; /* Safari and Chrome */
    -o-transition: margin-left 1s; /* Opera */
}
.with-panel .komoo-map-googlemap {
    margin-left: 330px !important;
}
.collapsed .komoo-map-googlemap {
    margin-left: 0px !important;
    width: auto !important;
}
.partners-logo-list {
    overflow-x: hidden;
    white-space: nowrap;
}
.partners-logo-list .partner-logo {
    display: inline;
}
.map-canvas .placeholder {
    width: 247px;
    height: 40px;
}
#geometry-selector li {
    display: block;
    margin: 2px;
}
#map-canvas-preview .placeholder,
.map-canvas .placeholder {
    font-size: 16px;
    padding: 80px 35px;
    text-align: center;
    background: #DCEFF4;
}
#map-panel-content {
    margin-right: -30px;
}
#map-panel div.img-holder {
    width: 35px;
    text-align: center;
    display: inline-block;
    vertical-align: middle;
}
#map-panel #filter-cirle,
#map-panel ul.geo-objects-listing li {
    border-bottom: 1px solid #e9e9e9;
}
#map-panel ul.geo-objects-listing .sublist li:hover,
#map-panel ul.geo-objects-listing .sublist li.selected,
#map-panel ul.geo-objects-listing li .item:hover { background: #dceff4 }
#map-panel ul.geo-objects-listing li.sublist { padding: 0 }
#filter-form ul.geo-objects-listing li.sublist { display: none }
#map-panel ul.geo-objects-listing li.sublist:hover { background: transparent }
#map-panel ul.geo-objects-listing li.sublist ul li:last-child { border-bottom: none }
#map-panel ul.geo-objects-listing.frozen li .item:hover { background: none; cursor: default; }
#map-panel ul.geo-objects-listing li .item.selected,
#map-panel ul.geo-objects-listing.frozen li .item.selected:hover { background: #b1dde8 }
#filter-submit {
    padding-left: 2em;
    padding-right: 2em;
}
#filter-circle { padding: 8px; }
#filter-circle .button { margin-left: 0em }
#filter-circle .button .icon-plus { vertical-align: middle }
#filter-circle .highlight { background: #ffc1ae }
#filter-circle span {
    margin-left: 31px;
    padding: 10px 15px 15px;
    border-radius        : 7px 7px 0 0;
    -moz-border-radius   : 7px 7px 0 0;
    -webkit-border-radius: 7px 7px 0 0;
}
#filter-circle input {
    width: 3em;
    vertical-align: baseline;
    box-shadow: 1px 1px 1px #999999 inset;
    background: #fafafa;
}
#filter-circle .help-step {
    display: none;
    width: 208px;
    height: 18px;
    text-align: center;
    padding: 15px;
    margin: 0 0 0 38px;
    border-radius        : 7px;
    -moz-border-radius   : 7px;
    -webkit-border-radius: 7px;
}
/* ... */

